Java 11 support :arrow_up: [ci drivers]