@@ -8,10 +8,6 @@
   :dependencies
   [[com.amazon.redshift/redshift-jdbc42-no-awssdk "1.2.18.1036"]]
 
-  :jvm-opts
-  ["-XX:+IgnoreUnrecognizedVMOptions"
-   "--add-modules=java.xml.bind"]
-
   :profiles
   {:provided
    {:dependencies [[metabase-core "1.0.0-SNAPSHOT"]]}
