@@ -4,10 +4,6 @@
   :dependencies
   [[org.xerial/sqlite-jdbc "3.25.2"]]
 
-  :jvm-opts
-  ["-XX:+IgnoreUnrecognizedVMOptions"
-   "--add-modules=java.xml.bind"]
-
   :profiles
   {:provided
    {:dependencies [[metabase-core "1.0.0-SNAPSHOT"]]}
